--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,7 +26,9 @@ body {
  */
 
  :root {
-  --header-new-tweet: #ef3c1f;
-  --header-background: #4056A1;
-  --header-text: #FFFFFF;
+  --navbar-new-tweet: #ef3c1f;
+  --navbar-background: #4056A1;
+  --navbar-text: #FFFFFF;
+
+  --header-background: #d89722;
  }
