--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,13 +1,14 @@
 nav {
   display: flex;
+  position: fixed;
   justify-content: space-between;
   align-items: center;
   padding: 0 1.5em;
   height: 120px;
   width: 100vw;
   /*background-color: #4056A1;*/
-  background-color: var(--header-background);
-  color: var(--header-text);
+  background-color: var(--navbar-background);
+  color: var(--navbar-text);
 }
 
 nav span.logo {
@@ -17,5 +18,5 @@ nav .new-tweet {
   text-align: center;
 }
 nav .new-tweet i {
-  color: var(--header-new-tweet);
+  color: var(--navbar-new-tweet);
 }
