--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,13 +6,13 @@ nav {
   padding: 0 1.5em;
   height: 120px;
   width: 100vw;
-  /*background-color: #4056A1;*/
   background-color: var(--navbar-background);
   color: var(--navbar-text);
 }
 
 nav span.logo {
-  font-family: 'Bungee', sans-serif;  
+  /* font-family: 'Bungee', sans-serif; */
+  font-family: var(--logo-font-family);
 }
 nav .new-tweet {
   text-align: center;
