--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,6 +30,7 @@ body {
   --navbar-background: #4056A1;
   --navbar-text: #FFFFFF;
   --header-background: #198a7b;
+  --header-text-color: #d9d7d2;
   --logo-font-family: 'Bungee', sans-serif;
   --logo-color: #FFFFFF;
   --counter-font-family: 'Bungee', sans-serif;
