--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,4 @@
-header {
+header.nav {
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -8,10 +8,10 @@ header {
   background-image: url(../images/asfalt-light.png);
 }
 
-header div:first-child {
+header.nav div:first-child {
   max-height: 256px;
 }
 
-header div h2 {
+header.nav div h2 {
   color: var(--header-text-color);
 }
