--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -49,45 +49,46 @@ body {
   margin: 0 auto; /*no vertical margin, just horizontal.*/
  }
 
- div.tweet {
+ div.tweets {
   max-width: 60vw;
   margin: 60px auto 0 auto;
  }
 
- div.tweet article {
+ div.tweets article {
   text-align: left;
   padding: 20px;
   border: 3px solid var(--default-line-color);
+  margin-bottom: 10px;
  }
 
- div.tweet header, div.tweet footer {
+ div.tweets header, div.tweets footer {
   display: flex;
   justify-content: space-between;
  }
 
- div.tweet article .avatar-info {
+ div.tweets article .avatar-info {
   min-width: 10vw;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
  }
 
- div.tweet article .avatar-info-username {
+ div.tweets article .avatar-info-username {
   display: flex;
   align-items: center;
  }
 
- div.tweet article:hover {
+ div.tweets article:hover {
   -webkit-box-shadow: 5px 5px 10px 2px rgba(85,81,73,0.78);
   box-shadow: 5px 5px 10px 2px rgba(85,81,73,0.78);
  }
 
- div.tweet article .tweet-content {
+ div.tweets article .tweet-content {
   border-bottom: 4px solid var(--default-line-color);
   padding-bottom: 20px;
   margin: 30px auto 5px auto;
  }
 
- div.tweet .tweet-action-icon i:hover {
+ div.tweets .tweet-action-icon i:hover {
   color: var(--tweet-action-icon-color-hover);
  }
