Cleaning up code and commenting.

--- a/public/styles/error-message.css
+++ b/public/styles/error-message.css
@@ -1,8 +1,10 @@
 .error-message-validation {
-  max-width: 20vw;
+  max-width: 25vw;
   margin: 20px auto;
   border: 2px solid var(--default-error-color);
   border-radius: 15px;
+  padding: 10px;
+  font-size: 0.9em;
   display: none; /*initial state*/
 }
 
