Moved tweet related styling into its own tweets.css file

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -44,3 +44,7 @@ output.counter {
 output.counter.overflow {
   color: var(--tweet-disabled-counter-color);
 }
+
+section.new-tweet {
+  display: none;
+ }
