--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,3 +1,7 @@
+/*
+  CSS for the tweets container, and tweets.
+*/
+
 div.tweets {
   max-width: 60vw;
   margin: 60px auto 0 auto;
@@ -28,8 +32,8 @@ div.tweets {
  }
 
  div.tweets article:hover {
-  -webkit-box-shadow: 5px 5px 10px 2px rgba(85,81,73,0.78);
-  box-shadow: 5px 5px 10px 2px rgba(85,81,73,0.78);
+  -webkit-box-shadow: 5px 5px 10px 2px var(--tweet-hover-shadowbox-color);
+  box-shadow: 5px 5px 10px 2px var(--tweet-hover-shadowbox-color);
  }
 
  div.tweets article .tweet-content {
