--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,7 +6,8 @@ header.nav {
   align-items: center;
   justify-content: flex-end;
   flex-direction: column;
-  height: 500px;
+  height: 390px;
+  /*height: 500px*/
   background-color: var(--header-background);
   background-image: url(../images/asfalt-light.png);
 }
