--- a/public/styles/error-message.css
+++ b/public/styles/error-message.css
@@ -1,14 +1,34 @@
-.error-message-validation {
+/* error message css */
+
+/*DEPRECATED USE */
+/* .error-message-validation {
   max-width: 25vw;
   margin: 20px auto;
   border: 2px solid var(--default-error-color);
   border-radius: 15px;
   padding: 10px;
   font-size: 0.9em;
-  display: none; /*initial state*/
+  display: none;
 }
 
 .error-message-validation .error-text {
   color: var(--default-error-color);
-}
+} */
 
+.bootbox .modal-header {
+  background-color: var(--navbar-background);
+}
+.bootbox .modal-header h5 {
+  font-family: var(--logo-font-family);
+  color: var(--logo-color);
+}
+.bootbox .close {
+  color: var(--header-text-color);
+}
+.bootbox .close:hover {
+  color: var(--default-text-color);
+}
+.btn.btn-primary.bootbox-accept {
+  background-color: var(--navbar-background);
+  border-color: var(--default-error-button-border-color);
+}
